--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "method-override": "^2.3.6",
-    "mongoose": "^4.6.0"
+    "mongoose": "^4.6.0",
+    "nodemon": "^1.12.4"
   },
   "devDependencies": {},
   "scripts": {
